# variousgpt

./: .gitignore  .gitingore  apikey.txt  cloudbuild.yaml  r.txt
gpt-app/: new.prompty  pyproject.toml  r.txt  r1.txt  r2.txt  readme.md  requirements.txt
gpt-app/gpt_app/: __main__.py  flask_app.py  fr.txt  robots.txt  sitemap.xml  wsgi.py
gpt-app/gpt_app/blueprints/company/: __init__.py  format_content.py  post.py  routes.py
gpt-app/gpt_app/blueprints/gflow/: routes.py
gpt-app/gpt_app/blueprints/google_auth/: __init__.py  auth.py  routes.py
gpt-app/gpt_app/blueprints/gptube/: __init__.py  classify_pdf.py  extract_pdf_metadata.py  gpt_service.py  helpers_db.py  helpers_gcs.py  helpers_pdf.py  hotfix.txt  load_pdf.py  load_youtube_audio.py  process_pdf_text.py  routes.py  service_answer_with_corpus.py  tool_summarise.py  (+7 more)
gpt-app/gpt_app/common/: __init__.py  constants.py  dirs.py  enums.py  exceptions.py  generate_sitemap.py  models.py  prompt_manager.py  record_handler.py  session_manager.py  supabase_handler.py  utils.py  utils_audio.py  utils_dir.py  utils_openai.py  utils_text.py
gpt-app/gpt_app/static/: alphastreet_scrape.txt  chatpdf_keywords.txt  conch_keywords.txt  consensus_keywords.txt
gpt-app/gpt_app/templates/: chat.html  companies.html  company.html  concall.html  conch.html  embed copy.html  embed.html  getfile.html  index.html  landing.html  nembd.html  newlp.html  nsubmit.html  progress.html  sample.html  status.html  submit.html
gpt-app/send_to_car/: app.py  gcs_utils.py  main.html
gpt-app/send_to_car/templates/: import.html  index.html
(+190 files in other folders)
